--- a/Source/.htaccess
+++ b/Source/.htaccess
@@ -3,5 +3,4 @@ RewriteBase /ExampleAPI/
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-l
-RewriteRule ^(.*) index.php?/$1 [L]
+RewriteRule (.*) index.php?/$1 [L]
